--- a/src/components/LoginPanel.mxml
+++ b/src/components/LoginPanel.mxml
@@ -2,7 +2,7 @@
 <s:Panel xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
-		  width="400" height="230">
+		 width="100%" height="100%">
 	
 	<s:layout>
 		<s:VerticalLayout horizontalAlign="center"
@@ -68,20 +68,6 @@
 			<mx:FormItem label="Пароль:">
 				<s:TextInput id="password" 
 							 displayAsPassword="true"/>
-			</mx:FormItem>
-			<mx:FormItem label="Роль в системе:">
-				<s:ComboBox id="systemRoles"> 
-					<s:dataProvider> 
-						<mx:ArrayCollection> 
-							<mx:source> 
-								<fx:Object label="Посетитель" data="user"/> 
-								<fx:Object label="Дизайнер" data="designer"/> 
-								<fx:Object label="Менеджер" data="manager"/>
-								<fx:Object label="Администратор" data="admin" />
-							</mx:source> 
-						</mx:ArrayCollection> 
-					</s:dataProvider>      
-				</s:ComboBox> 
 			</mx:FormItem>
 			<mx:FormItem>
 				<s:HGroup width="100%">
